--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="eu">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}symfony-vuetify{% endblock %}</title>
+    <title>{% block title %}Hirurtekoak{% endblock %}</title>
     {% block stylesheets %}
         {{ encore_entry_link_tags('main') }}
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet" type="text/css">
